fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -19,9 +19,6 @@
   color: white;
 }
 
-.App-link {
-}
-
 #search-form{
   display: inline-block;
   width: 70%;
